deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/Lead_Inbound_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log of every inbound webhook payload received by n8n for the R360 lead-capture migration. Every WPForm / SocialIntents bot / Pre-Discovery POST is logged here BEFORE downstream SF writes, providing idempotency (via Idempotency_Hash__c External Id) and a 0-miss reconciliation guarantee. Records are written by the n8n integration user only. See migration-plans/r360-n8n-build-plan.md §13.</description>
    <label>Lead Inbound Log</label>
    <nameField>
        <displayFormat>LIL-{0000000}</displayFormat>
        <label>Lead Inbound Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Inbound Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>