deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Decision_Path__c.field-meta.xml
<CustomField>
    <fullName>Decision_Path__c</fullName>
    <description>Which branch of the R360 resolver fired for this submission. Maps to the §5.2 4-path tree + ReQuery sub-tree (A4a/A4b/A4c-i/A4c-ii/A4d) + skip path X.</description>
    <label>Decision Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A4a</fullName>
                <label>A4a — Lead found via requery</label>
            </value>
            <value>
                <fullName>A4b</fullName>
                <label>A4b — Create Lead</label>
            </value>
            <value>
                <fullName>A4c-i</fullName>
                <label>A4c-i — Contact found via requery (Prospect)</label>
            </value>
            <value>
                <fullName>A4c-ii</fullName>
                <label>A4c-ii — Contact found via requery (Customer)</label>
            </value>
            <value>
                <fullName>A4d</fullName>
                <label>A4d — End for Short Form (terminal)</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B — Update Lead</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C — Update Contact (Customer / AM)</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D — Update Contact (Prospect / SDR + Case)</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>X — Skipped (no-email / contactform-no-record)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>