deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>SF API error / n8n exception message when Status__c='failed'. Also used for non-blocking warnings (e.g., 'Apollo: no match', 'Slack DM skipped: AE.Slack_ID__c missing') on success paths.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>