deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/External_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Submission_Id__c</fullName>
    <description>The source-system identifier for this submission: WPForms entry_id (numeric), SocialIntents conversation id, or Pre-Discovery webhook execution id. Combined with Source__c to compute Idempotency_Hash__c.</description>
    <inlineHelpText>WPForms entry_id, SocialIntents conversation id, or Pre-Discovery webhook execution id.</inlineHelpText>
    <label>External Submission Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>