deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Idempotency_Hash__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>SHA-256 hash of (form_id + ":" + external_submission_id). Used as the External Id for upsert dedup — first n8n receiver to write wins, parallel calls short-circuit. Computed at receiver boundary before any downstream SF call.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto-populated by n8n. Do not edit. Used for idempotent upsert.</inlineHelpText>
    <label>Idempotency Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>