deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/n8n_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>n8n_Execution_Id__c</fullName>
    <description>n8n execution UUID for traceability — pairs with the n8n executions log so you can drill from a SF row back to the n8n workflow run that produced it. NULL during dual-write Phase A means "Zapier-only entry, n8n did not receive."</description>
    <inlineHelpText>n8n execution UUID. NULL when this row was written by Zapier-only path during parallel-run.</inlineHelpText>
    <label>n8n Execution Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>