deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Raw JSON of the inbound webhook payload for forensics. Captured before normalization. Truncate to 32,768 chars if oversize (rare for WPForms; possible for bot transcripts).</description>
    <inlineHelpText>Raw inbound JSON payload as received. For audit / replay only.</inlineHelpText>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>