deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Received_At__c.field-meta.xml
<CustomField>
    <fullName>Received_At__c</fullName>
    <description>Timestamp when n8n received the inbound webhook. Used by the daily 9am SOQL audit (LAST_N_DAYS:1) and the parallel-run reconciliation cron.</description>
    <label>Received At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>