deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Resolved_Contact__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact record this submission resolved to (created or updated). Populated for paths A4c-i, A4c-ii, C, D, and webhook_pre_discovery.</description>
    <label>Resolved Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>R360 Inbound Logs</relationshipLabel>
    <relationshipName>R360_Inbound_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>