deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Resolved_Lead__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Lead record this submission resolved to (created or updated). Populated for paths A4a, A4b, B.</description>
    <label>Resolved Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>R360 Inbound Logs</relationshipLabel>
    <relationshipName>R360_Inbound_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>