deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Which n8n receiver produced this log row. Maps 1:1 to a webhook endpoint and a sub-workflow.</description>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>wpform_29710</fullName>
                <label>WPForm 29710 (Contact Form)</label>
            </value>
            <value>
                <fullName>wpform_29712</fullName>
                <label>WPForm 29712 (Watch Video)</label>
            </value>
            <value>
                <fullName>wpform_29714</fullName>
                <label>WPForm 29714 (Get a Demo)</label>
            </value>
            <value>
                <fullName>bot_r360</fullName>
                <label>SocialIntents Bot R360 Path</label>
            </value>
            <value>
                <fullName>webhook_pre_discovery</fullName>
                <label>Pre-Discovery Webhook</label>
            </value>
            <value>
                <fullName>wpform_33076</fullName>
                <label>WPForm 33076 (FAQ)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>