deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state of this inbound submission. received → written | replayed | replayed_duplicate | failed | X_skipped_no_email | X_no_record_skipped_contactform | email_only_tracked | superseded_by_full_form | X_no_record_skipped_email_only | africa_pending → africa_continued | africa_killed.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>received</fullName>
                <default>true</default>
                <label>received</label>
            </value>
            <value>
                <fullName>written</fullName>
            </value>
            <value>
                <fullName>replayed</fullName>
            </value>
            <value>
                <fullName>replayed_duplicate</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>X_skipped_no_email</fullName>
            </value>
            <value>
                <fullName>X_no_record_skipped_contactform</fullName>
            </value>
            <value>
                <fullName>email_only_tracked</fullName>
            </value>
            <value>
                <fullName>superseded_by_full_form</fullName>
            </value>
            <value>
                <fullName>X_no_record_skipped_email_only</fullName>
            </value>
            <value>
                <fullName>africa_pending</fullName>
            </value>
            <value>
                <fullName>africa_continued</fullName>
            </value>
            <value>
                <fullName>africa_killed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>