deliverables/r360-n8n-migration/sf-metadata/force-app/main/default/objects/Lead_Inbound_Log__c/listViews/All_Failed_Last_24h.listView-meta.xml
<ListView>
    <fullName>All_Failed_Last_24h</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Received_At__c</columns>
    <columns>Retry_Count__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Decision_Path__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>failed</value>
    </filters>
    <filters>
        <field>Received_At__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <label>All Failed (Last 24h)</label>
</ListView>